--- a/Articles/VECM/tabs/Johansen.tex
+++ b/Articles/VECM/tabs/Johansen.tex
@@ -6,7 +6,7 @@
 \caption{Cointegration test}
 \label{Johansen}
 \begin{threeparttable}
-%\resizebox{\textwidth}{!}{%
+\resizebox{\textwidth}{!}{%
 \begin{tabular}{l|l|c|c}
 \hline
  \hline
@@ -21,7 +21,7 @@
  & $r = 1^*$ &7.87&9.24\\ 
   \hline
 \end{tabular}%
-%}
+}
 \footnotesize{(a) Using trace test with constant for the 5th lag (according to AIC criteria). (*) Indicates the selected rank that implies cointegration.}
 \end{threeparttable}
 \caption*{\textbf{Source:} Authors' elaboration}
