--- a/Articles/VECM/tabs/hypothesis.tex
+++ b/Articles/VECM/tabs/hypothesis.tex
@@ -19,7 +19,7 @@
 			\\ \hline
 			\textbf{3. $\alpha_2 < 0$} &
 			\begin{tabular}[c]{@{}l@{}}Own interest rate Granger-causes\\
-				residential investment growth rate\end{tabular} & \begin{tabular}[c]{@{}l@{}} $g_{I_h}$ dynamics is not affected\\ by previous equilibrium deviation\end{tabular}
+				residential investment growth rate\end{tabular} & \begin{tabular}[c]{@{}l@{}} $g_{I_h}$ dynamics is affected\\ by previous equilibrium deviation\end{tabular}
 			\\ \hline
 			\textbf{4. $\phi_1 > 0$} &
 			\begin{tabular}[c]{@{}l@{}}Series share a common\\negative long-run relationship\end{tabular} &
