--- a/Articles/VECM/Petrini_VECM_2021.org
+++ b/Articles/VECM/Petrini_VECM_2021.org
@@ -2,14 +2,50 @@
 #+OPTIONS: toc:nil author:nil
 #+LATEX_CLASS: article
 #+LATEX_CLASS_OPTIONS: [12pt, a4]
+* Configs :ignore:
+** Packages :ignore:
 #+LATEX_HEADER: \addbibresource{ref.bib}
 #+LATEX_HEADER: \usepackage{svg, caption, multirow, booktabs, tabularx, subfigure, subcaption, lscape, tablefootnote, threeparttable}
 #+LATEX_HEADER: \newcolumntype{b}{>{\hsize=2.3\hsize}X}
 #+LATEX_HEADER: \newcolumntype{s}{>{\hsize=.45\hsize}X}
 #+LATEX_HEADER: \newcolumntype{m}{>{\hsize=.9\hsize}X}
-
-#+LATEX_HEADER: \usepackage{authblk}
 #+LATEX_HEADER: \usepackage[english]{babel}
+*** Original date ([[https://tex.stackexchange.com/questions/142999/the-proper-way-to-cite-the-earliest-publication-date-in-brackets-followed-by][Link]]) :ignore:
+#+begin_export latex :exports none
+\DeclareLabeldate{%
+  \field{date}
+  \field{year}
+  \field{eventdate}
+  \field{urldate}
+  \literal{nodate}
+}
+
+\renewbibmacro*{date+extradate}{%
+  \iffieldundef{labelyear}
+    {}
+    {\printtext[parens]{%
+       \iffieldundef{origyear}
+         {}
+         {\printtext[brackets]{\printorigdate}%
+          \setunit{\addspace}}%
+       \iflabeldateisdate
+         {\printdateextra}
+         {\printlabeldateextra}}}}
+
+\renewbibmacro*{cite:labeldate+extradate}{%
+  \iffieldundef{labelyear}
+    {}
+    {\printtext[bibhyperref]{%
+       \iffieldundef{origyear}
+         {}
+         {\printtext[brackets]{\printorigdate}%
+          \setunit{\addspace}}%
+       \printlabeldateextra}}}
+#+end_export
+
+
+** Authors infos :ignore:
+#+LATEX_HEADER: \usepackage{authblk}
 #+LATEX_HEADER:\author[1]{Gabriel Petrini}
 #+LATEX_HEADER:\affil[1]{PhD Student at University of Campinas (Brazil), Email: \url{gpetrinidasilveira@gmail.com}} % Author affiliation
 #+LATEX_HEADER:\author[2]{Lucas Teixeira}
@@ -20,6 +56,7 @@
 #+PROPERTY: header-args:python :python /usr/bin/python3 :exports none :eval never-export
 #+BIND: org-latex-prefer-user-labels t
 
+* Abstract :ignore:
 #+BEGIN_abstract
 This article investigates the relationship between residential investment, asset inflation, and macroeconomic dynamics based on
 the US post-deregulation case (1992-2019). To do so, we estimate a vector error correction model (VECM) to asses the relevance of
@@ -32,8 +69,9 @@ while the other way round does not occur.
 #+END_abstract
 
 
-* General TODOs                                                    :noexport:
-
+* TODOs :noexport:ignore:
+** TODO Printer-friendly plots
+** TODO Fix axis labels font size
 * Introduction
 #+LATEX: \label{sec:Introduction}
 #+INCLUDE: "Introduction.org"
