--- a/Articles/VECM/Stylized_Facts.org
+++ b/Articles/VECM/Stylized_Facts.org
@@ -490,7 +490,7 @@ our subsidies through the local authorities), it should be given without delay o
 #+end_quote
 
 As the above excerpt suggests, the relevance of housing is not restricted to the Great Recession nor the USA case.
-Moreover, however small its share on GDP is (see Figure ref:vol_share A), it does not imply that it has negligible effects on the business cycle or low volatility (see Figure ref:vol_share B).
+Moreover, however small its share on GDP is (see Figure ref:fig:vol_share A), it does not imply that it has negligible effects on the business cycle or low volatility (see Figure ref:fig:vol_share B).
 
 #+begin_export latex
 \begin{figure}[H]
