Creating empty files. Adjusting Thesis's tags. QCA structure.

--- a/Articles/VECM/Petrini_VECM_2021.org
+++ b/Articles/VECM/Petrini_VECM_2021.org
@@ -1,7 +1,7 @@
 #+TITLE: Untitled
 #+OPTIONS: toc:nil author:nil
 #+LATEX_CLASS: article
-#+LATEX_CLASS_OPTIONS: [12pt, a4]
+#+LATEX_CLASS_OPTIONS: [12pt, a4paper]
 * Configs :ignore:
 ** Packages :ignore:
 #+LATEX_HEADER: \addbibresource{ref.bib}
