--- a/Writings/QCA/Research_Paper.org
+++ b/Writings/QCA/Research_Paper.org
@@ -1,4 +1,4 @@
-#+TITLE: A research chapter
+#+TITLE: The great mortgaging and the housing financing revolution: enabling each other? An institutional fuzzy-set Qualitative Comparative Analysis (fsQCA) for 17 OECD countries (1989-2016)
 #+LATEX_CLASS: SelfArx
 #+SETUPFILE: ../manuscript.setup
 #+INCLUDE: Infos.org
@@ -10,7 +10,7 @@
 #+LATEX:\maketitle % Print the title and abstract box
 #+LATEX:\thispagestyle{empty} % Removes page numbering from the first page
 
-* Capítulo QCA
+* Capítulo QCA :ignore:
 
 ** Epígrafe                                                   :ignore:Thesis:
 
@@ -20,10 +20,34 @@
 
 
 ** Introduction
+*** Importância do mercado imobiliário para compreender características da GFC
+*** Relação entre endividamento das famílias, preço dos imóveis e estabilidade financeira
+*** Apresentação do conceito de hipotecarização e mudanças de longo prazo
+*** Apresentação da revolução
+*** Estrutura do artigo
 
-** Methods
+** Empirical motivation
+*** Apresentar conceito da hipotecarização
+*** Analisar os dados
+*** Agrupar países e explicitar possíveis hipóteses direcionais e trajetórias
+** Review of literature
+*** Revisão da literatura de financeirização e pouca anteção para o setor imobiliário
+*** Apresentar a revolução em maiores detalhes
+*** Apresentar comparação internacional e elementos institucionais
+*** Revisão da literatura empírica e incapacidade de analisar variáveis qualitativas adequadamente
+** Data and Methods
+*** Reagrupar informações institucionais de forma qualitativa
+*** Apresentar origens, aplicações e vantagens do QCA
+*** Explicar etapas do QCA
+*** Calibrar dados
+*** Elaborar Truth table
+** Results and parameters of fit
+*** Minimização da presença do resultado
+*** Minimização da ausência do resultado
+*** Apresentar parâmetros dos resultados
+**** Testes de reobustez
 
-** Conclusion
+** Concluding remarks
 
 ** Acknowledgements                                                 :journal:
 
