--- a/Writings/QCA/Research_Paper.tex
+++ b/Writings/QCA/Research_Paper.tex
@@ -1,4 +1,4 @@
-% Created 2020-09-24 qui 17:09
+% Created 2021-02-04 qui 12:08
 % Intended LaTeX compiler: pdflatex
 \documentclass{SelfArx}
   \usepackage[T1]{fontenc}
@@ -44,7 +44,7 @@ maxcitenames=3]{biblatex}
 }
 }
 \date{}
-\title{A research chapter}
+\title{The great mortgaging and the housing financing revolution: enabling each other? An institutional fuzzy-set Qualitative Comparative Analysis (fsQCA) for 17 OECD countries (1989-2016)}
 \begin{document}
 
 \JournalInfo{Draft} % Journal information
@@ -64,20 +64,65 @@ maxcitenames=3]{biblatex}
 \maketitle % Print the title and abstract box
 \thispagestyle{empty} % Removes page numbering from the first page
 
-\section*{Capítulo QCA}
-\label{sec:orgdb30c7d}
+\section*{Introduction}
+\label{sec:org3c0d700}
+\subsection*{Importância do mercado imobiliário para compreender características da GFC}
+\label{sec:org9d17eab}
+\subsection*{Relação entre endividamento das famílias, preço dos imóveis e estabilidade financeira}
+\label{sec:orgeb00e3c}
+\subsection*{Apresentação do conceito de hipotecarização e mudanças de longo prazo}
+\label{sec:org18b2165}
+\subsection*{Apresentação da revolução}
+\label{sec:orga14d999}
+\subsection*{Estrutura do artigo}
+\label{sec:org2c74e1b}
 
-\subsection*{Introduction}
-\label{sec:org1ebd637}
+\section*{Empirical motivation}
+\label{sec:orga5d2322}
+\subsection*{Apresentar conceito da hipotecarização}
+\label{sec:org5ae8057}
+\subsection*{Analisar os dados}
+\label{sec:org2e4fe1e}
+\subsection*{Agrupar países e explicitar possíveis hipóteses direcionais e trajetórias}
+\label{sec:orgcfc2b4c}
+\section*{Review of literature}
+\label{sec:orgf3eedd6}
+\subsection*{Revisão da literatura de financeirização e pouca anteção para o setor imobiliário}
+\label{sec:org62ec32f}
+\subsection*{Apresentar a revolução em maiores detalhes}
+\label{sec:orgaa39878}
+\subsection*{Apresentar comparação internacional e elementos institucionais}
+\label{sec:org2a156c3}
+\subsection*{Revisão da literatura empírica e incapacidade de analisar variáveis qualitativas adequadamente}
+\label{sec:org414fdb6}
+\section*{Data and Methods}
+\label{sec:org71a98b9}
+\subsection*{Reagrupar informações institucionais de forma qualitativa}
+\label{sec:org5a0cd3b}
+\subsection*{Apresentar origens, aplicações e vantagens do QCA}
+\label{sec:org21da5cf}
+\subsection*{Explicar etapas do QCA}
+\label{sec:org582754d}
+\subsection*{Calibrar dados}
+\label{sec:org7779120}
+\subsection*{Elaborar Truth table}
+\label{sec:org557883f}
+\section*{Results and parameters of fit}
+\label{sec:orgaa16a49}
+\subsection*{Minimização da presença do resultado}
+\label{sec:org4d9c0e8}
+\subsection*{Minimização da ausência do resultado}
+\label{sec:orgee6f294}
+\subsection*{Apresentar parâmetros dos resultados}
+\label{sec:org0b94c79}
+\subsubsection*{Testes de reobustez}
+\label{sec:org4ef173e}
 
-\subsection*{Methods}
-\label{sec:org5f689f3}
+\section*{Concluding remarks}
+\label{sec:org3ae66c1}
 
-\subsection*{Conclusion}
-\label{sec:org47ad705}
-
-\subsection*{Acknowledgements}
-\label{sec:orgbdd9b33}
+\section*{Acknowledgements}
+\label{sec:org45f16cb}
 
 Agradecimentos
 
