--- a/Writings/thesis.org
+++ b/Writings/thesis.org
@@ -6,9 +6,9 @@
 #+INCLUDE: ./abnt/_pretextual.org
 
 
-* QCA                                                                :ignore:
+* QCA
 
-#+INCLUDE: "./QCA/Research_Paper.org" :lines "11-"
+#+INCLUDE: "./QCA/Research_Paper.org" :lines "13-"
 
 * Appendix :ignore:
 
