--- a/Writings/QCA/DataMap.org
+++ b/Writings/QCA/DataMap.org
@@ -1,8 +1,9 @@
 #+OPTIONS: num:nil
 #+TITLE: QCA Data Map
 #+AUTHOR: Gabriel Petrini
-#+startup: shrink
+#+startup: fold
 #+PROPERTY:header-args python :results output drawer :eval never-export :session map :exports both
+#+PROPERTY:header-args R:results output drawer :eval never-export :session map :exports both
 * Properties :noexport:
 #+TODO: Searching Filed | Downloaded Scripted Cleaned | NotFound
 #+PROPERTY: COLUMNS  %TODO %ITEM %VAR_TYPE(Var.) %FREQUENCY(FRQ)  %START(Start) %END(End) %COVERAGE(Cov) %SEASONAL_ADJ(Season. Adj) %KEY(Key) %URL
@@ -95,7 +96,7 @@
 #+END
 
 * Code initialization
-
+** Python
 #+begin_src python
 import numpy as np
 import pandas as pd
@@ -115,6 +116,19 @@ plt.style.use('seaborn-white')
 numpy version  :  1.18.4
 pandas version :  1.1.3
 seaborn version :  0.11.0
+:end:
+** R
+
+#+begin_src R
+library(tidyverse, warn.conflicts = FALSE) # dplyr, ggplot2, etc
+library(gghighlight) # for some data in second plane
+library(haven) # For loading stata datasets
+
+options(warn = -1)
+#+end_src
+
+#+RESULTS:
+:results:
 :end:
 
 * Mortgaging - cite:jorda_2016_great
@@ -220,6 +234,84 @@ plt.close()
 
 #+RESULTS:
 [[file:./figs/Jorda_TQCA_Outcome.png]]
+
+** Facet plot
+
+#+begin_src R :results graphics file :file ./figs/Jorda_Facet.png
+df = read_dta(
+  'http://www.macrohistory.net/JST/JSTdatasetR4.dta',
+  encoding = NULL,
+  col_select = NULL,
+  skip = 0,
+  n_max = Inf,
+  .name_repair = "unique"
+) %>% mutate(mortgaging = tmort/tloans) %>%
+  mutate(year = lubridate::ymd(year, truncated = 2L)) %>%
+  select(year, country, mortgaging) %>%
+  pivot_wider(names_from = country, values_from = mortgaging) %>%
+  rowwise() %>% mutate("[Average]" = mean(c_across(Australia:USA), na.rm=TRUE)) %>%
+  pivot_longer(!year, names_to = "country", values_to = "mortgaging")
+
+ggplot(df) +
+  geom_line(aes(year, mortgaging, colour = country), color='black') +
+  gghighlight(use_direct_label = FALSE) +
+  facet_wrap(~ country) +
+  xlab("") + ylab("Mortgage share on total loans") +
+  geom_hline(yintercept=.50, linetype="dashed", color = "black", size=0.25) +
+  scale_x_date(date_breaks = "25 years", date_minor_breaks = "5 years", date_labels = "%Y")
+
+ggsave(
+  './figs/Jorda_Facet.png',
+  width = 10, height = 8, dpi = 150, units = "in", device='png'
+       )
+#+end_src
+
+#+RESULTS:
+[[file:./figs/Jorda_Facet.png]]
+
+
+
+
+** Real estate share of bank lending
+
+#+begin_src R :results graphics file :file ./figs/Jorda_BarSorted.png
+df = read_dta(
+  'http://www.macrohistory.net/JST/JSTdatasetR4.dta',
+  encoding = NULL,
+  col_select = NULL,
+  skip = 0,
+  n_max = Inf,
+  .name_repair = "unique"
+) %>% filter(year == 1970 | year == 1989 | year == 2007 | year == max(year)) %>%
+  mutate(mortgaging = tmort/tloans) %>%
+  ## mutate(year = lubridate::ymd(year, truncated = 2L)) %>%
+  select(year, country, mortgaging) %>%
+  pivot_wider(names_from = country, values_from = mortgaging) %>%
+  rowwise() %>% mutate("[Average]" = mean(c_across(Australia:USA), na.rm=TRUE)) %>%
+  pivot_longer(!year, names_to = "country", values_to = "mortgaging") %>%
+  group_by(year) %>%
+  arrange(desc(mortgaging), .by_group = TRUE)
+
+ggplot(df, aes(tidytext::reorder_within(country, mortgaging, year), mortgaging, fill=1-mortgaging)) +
+    geom_bar(show.legend = FALSE,stat='identity', color='black') +
+    facet_wrap(~year, scales = "free_y") +
+    coord_flip() +
+    scale_y_continuous(expand = c(0,0)) +
+    tidytext::scale_x_reordered() +
+    xlab("") + ylab("Mortgage share on total loans") +
+    geom_text(aes(label=round(mortgaging,2)), position = position_stack(vjust= 0.5),
+            colour = "white", size = 2.5)
+
+ggsave(
+  './figs/Jorda_BarSorted.png',
+  width = 10, height = 8, dpi = 150, units = "in", device='png'
+       )
+#+end_src
+
+#+RESULTS:
+[[file:./figs/Jorda_BarSorted.png]]
+
+
 
 * Mortgage Loan to Value Ratio
 [[https://sdw.ecb.europa.eu/browse.do?node=9689356][ECB Statistical Data Warehouse:]] In the future, these should hopefully be complemented with comprehensive and comparable data on mortgage loan maturities and LTV, DSTI or LTI ratios.
